[package]
name = "oom"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
serde = { version = "1", features = ["derive"]}
serde_json = "1"

console_error_panic_hook = "0.1.7"
console_log = "0.2"
gloo-render = "0.2.0"
leptos = { version = "0.5.0-rc1", features = ["nightly", "csr"] }
web-sys = { version = "0.3.66", features = ["Element", "Document", "DomRect"] }
